--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ branches:
   only:
    - master
 
-before_script: ls
+before_script: cd ./fatman
 
 script:
-  - make && make test
+  - make
 
 notifications:
   email:
