自動化執行測試

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ before_script: cd ./fatman
 script:
   - make clean debug
 
+after_success:
+  - ./bin/Release/fatman
+  
 notifications:
   email:
     recipients:
