--- a/fatman/Makefile
+++ b/fatman/Makefile
@@ -3,13 +3,13 @@
 #------------------------------------------------------------------------------#
 
 
-WORKDIR = %cd%
+WORKDIR = `pwd`
 
-CC = gcc.exe
-CXX = g++.exe
-AR = ar.exe
-LD = g++.exe
-WINDRES = windres.exe
+CC = gcc
+CXX = g++
+AR = ar
+LD = g++
+WINDRES = windres
 
 INC = 
 CFLAGS = -Wall -fexceptions
@@ -25,9 +25,9 @@ RCFLAGS_DEBUG = $(RCFLAGS)
 LIBDIR_DEBUG = $(LIBDIR)
 LIB_DEBUG = $(LIB)
 LDFLAGS_DEBUG = $(LDFLAGS)
-OBJDIR_DEBUG = obj\\Debug
+OBJDIR_DEBUG = obj/Debug
 DEP_DEBUG = 
-OUT_DEBUG = bin\\Debug\\fatman.exe
+OUT_DEBUG = bin/Debug/fatman
 
 INC_RELEASE = $(INC) -Iinclude
 CFLAGS_RELEASE = $(CFLAGS) -O2
@@ -36,22 +36,22 @@ RCFLAGS_RELEASE = $(RCFLAGS)
 LIBDIR_RELEASE = $(LIBDIR)
 LIB_RELEASE = $(LIB)
 LDFLAGS_RELEASE = $(LDFLAGS) -s
-OBJDIR_RELEASE = obj\\Release
+OBJDIR_RELEASE = obj/Release
 DEP_RELEASE = 
-OUT_RELEASE = bin\\Release\\fatman.exe
+OUT_RELEASE = bin/Release/fatman
 
-OBJ_DEBUG = $(OBJDIR_DEBUG)\\main.o $(OBJDIR_DEBUG)\\src\\group.o $(OBJDIR_DEBUG)\\src\\rectangle.o $(OBJDIR_DEBUG)\\src\\term.o
+OBJ_DEBUG = $(OBJDIR_DEBUG)/main.o $(OBJDIR_DEBUG)/src/group.o $(OBJDIR_DEBUG)/src/rectangle.o $(OBJDIR_DEBUG)/src/term.o
 
-OBJ_RELEASE = $(OBJDIR_RELEASE)\\main.o $(OBJDIR_RELEASE)\\src\\group.o $(OBJDIR_RELEASE)\\src\\rectangle.o $(OBJDIR_RELEASE)\\src\\term.o
+OBJ_RELEASE = $(OBJDIR_RELEASE)/main.o $(OBJDIR_RELEASE)/src/group.o $(OBJDIR_RELEASE)/src/rectangle.o $(OBJDIR_RELEASE)/src/term.o
 
 all: debug release
 
 clean: clean_debug clean_release
 
 before_debug: 
-	cmd /c if not exist bin\\Debug md bin\\Debug
-	cmd /c if not exist $(OBJDIR_DEBUG) md $(OBJDIR_DEBUG)
-	cmd /c if not exist $(OBJDIR_DEBUG)\\src md $(OBJDIR_DEBUG)\\src
+	test -d bin/Debug || mkdir -p bin/Debug
+	test -d $(OBJDIR_DEBUG) || mkdir -p $(OBJDIR_DEBUG)
+	test -d $(OBJDIR_DEBUG)/src || mkdir -p $(OBJDIR_DEBUG)/src
 
 after_debug: 
 
@@ -60,28 +60,28 @@ debug: before_debug out_debug after_debug
 out_debug: before_debug $(OBJ_DEBUG) $(DEP_DEBUG)
 	$(LD) $(LIBDIR_DEBUG) -o $(OUT_DEBUG) $(OBJ_DEBUG)  $(LDFLAGS_DEBUG) $(LIB_DEBUG)
 
-$(OBJDIR_DEBUG)\\main.o: main.cpp
-	$(CXX) $(CFLAGS_DEBUG) $(INC_DEBUG) -c main.cpp -o $(OBJDIR_DEBUG)\\main.o
+$(OBJDIR_DEBUG)/main.o: main.cpp
+	$(CXX) $(CFLAGS_DEBUG) $(INC_DEBUG) -c main.cpp -o $(OBJDIR_DEBUG)/main.o
 
-$(OBJDIR_DEBUG)\\src\\group.o: src\\group.cpp
-	$(CXX) $(CFLAGS_DEBUG) $(INC_DEBUG) -c src\\group.cpp -o $(OBJDIR_DEBUG)\\src\\group.o
+$(OBJDIR_DEBUG)/src/group.o: src/group.cpp
+	$(CXX) $(CFLAGS_DEBUG) $(INC_DEBUG) -c src/group.cpp -o $(OBJDIR_DEBUG)/src/group.o
 
-$(OBJDIR_DEBUG)\\src\\rectangle.o: src\\rectangle.cpp
-	$(CXX) $(CFLAGS_DEBUG) $(INC_DEBUG) -c src\\rectangle.cpp -o $(OBJDIR_DEBUG)\\src\\rectangle.o
+$(OBJDIR_DEBUG)/src/rectangle.o: src/rectangle.cpp
+	$(CXX) $(CFLAGS_DEBUG) $(INC_DEBUG) -c src/rectangle.cpp -o $(OBJDIR_DEBUG)/src/rectangle.o
 
-$(OBJDIR_DEBUG)\\src\\term.o: src\\term.cpp
-	$(CXX) $(CFLAGS_DEBUG) $(INC_DEBUG) -c src\\term.cpp -o $(OBJDIR_DEBUG)\\src\\term.o
+$(OBJDIR_DEBUG)/src/term.o: src/term.cpp
+	$(CXX) $(CFLAGS_DEBUG) $(INC_DEBUG) -c src/term.cpp -o $(OBJDIR_DEBUG)/src/term.o
 
 clean_debug: 
-	cmd /c del /f $(OBJ_DEBUG) $(OUT_DEBUG)
-	cmd /c rd bin\\Debug
-	cmd /c rd $(OBJDIR_DEBUG)
-	cmd /c rd $(OBJDIR_DEBUG)\\src
+	rm -f $(OBJ_DEBUG) $(OUT_DEBUG)
+	rm -rf bin/Debug
+	rm -rf $(OBJDIR_DEBUG)
+	rm -rf $(OBJDIR_DEBUG)/src
 
 before_release: 
-	cmd /c if not exist bin\\Release md bin\\Release
-	cmd /c if not exist $(OBJDIR_RELEASE) md $(OBJDIR_RELEASE)
-	cmd /c if not exist $(OBJDIR_RELEASE)\\src md $(OBJDIR_RELEASE)\\src
+	test -d bin/Release || mkdir -p bin/Release
+	test -d $(OBJDIR_RELEASE) || mkdir -p $(OBJDIR_RELEASE)
+	test -d $(OBJDIR_RELEASE)/src || mkdir -p $(OBJDIR_RELEASE)/src
 
 after_release: 
 
@@ -90,23 +90,23 @@ release: before_release out_release after_release
 out_release: before_release $(OBJ_RELEASE) $(DEP_RELEASE)
 	$(LD) $(LIBDIR_RELEASE) -o $(OUT_RELEASE) $(OBJ_RELEASE)  $(LDFLAGS_RELEASE) $(LIB_RELEASE)
 
-$(OBJDIR_RELEASE)\\main.o: main.cpp
-	$(CXX) $(CFLAGS_RELEASE) $(INC_RELEASE) -c main.cpp -o $(OBJDIR_RELEASE)\\main.o
+$(OBJDIR_RELEASE)/main.o: main.cpp
+	$(CXX) $(CFLAGS_RELEASE) $(INC_RELEASE) -c main.cpp -o $(OBJDIR_RELEASE)/main.o
 
-$(OBJDIR_RELEASE)\\src\\group.o: src\\group.cpp
-	$(CXX) $(CFLAGS_RELEASE) $(INC_RELEASE) -c src\\group.cpp -o $(OBJDIR_RELEASE)\\src\\group.o
+$(OBJDIR_RELEASE)/src/group.o: src/group.cpp
+	$(CXX) $(CFLAGS_RELEASE) $(INC_RELEASE) -c src/group.cpp -o $(OBJDIR_RELEASE)/src/group.o
 
-$(OBJDIR_RELEASE)\\src\\rectangle.o: src\\rectangle.cpp
-	$(CXX) $(CFLAGS_RELEASE) $(INC_RELEASE) -c src\\rectangle.cpp -o $(OBJDIR_RELEASE)\\src\\rectangle.o
+$(OBJDIR_RELEASE)/src/rectangle.o: src/rectangle.cpp
+	$(CXX) $(CFLAGS_RELEASE) $(INC_RELEASE) -c src/rectangle.cpp -o $(OBJDIR_RELEASE)/src/rectangle.o
 
-$(OBJDIR_RELEASE)\\src\\term.o: src\\term.cpp
-	$(CXX) $(CFLAGS_RELEASE) $(INC_RELEASE) -c src\\term.cpp -o $(OBJDIR_RELEASE)\\src\\term.o
+$(OBJDIR_RELEASE)/src/term.o: src/term.cpp
+	$(CXX) $(CFLAGS_RELEASE) $(INC_RELEASE) -c src/term.cpp -o $(OBJDIR_RELEASE)/src/term.o
 
 clean_release: 
-	cmd /c del /f $(OBJ_RELEASE) $(OUT_RELEASE)
-	cmd /c rd bin\\Release
-	cmd /c rd $(OBJDIR_RELEASE)
-	cmd /c rd $(OBJDIR_RELEASE)\\src
+	rm -f $(OBJ_RELEASE) $(OUT_RELEASE)
+	rm -rf bin/Release
+	rm -rf $(OBJDIR_RELEASE)
+	rm -rf $(OBJDIR_RELEASE)/src
 
 .PHONY: before_debug after_debug clean_debug before_release after_release clean_release
 
